--- a/index.html
+++ b/index.html
@@ -56,17 +56,35 @@
     <div class="container mx-auto">
         <h2 class="text-3xl font-bold mb-8">Projects</h2>
 
-        <!-- Project Detail -->
+        <!-- Project Detail 1 -->
         <div class="mb-8">
             <h3 class="text-xl font-semibold mb-2">MATCONVNET based deep learning and iOS Mobile App Design for Handwritten Numeric Recognition</h3>
             <p class="text-lg">Implemented a project focusing on handwritten numeric recognition using MATCONVNET, a deep learning framework. The convolutional neural network (CNN) architecture was utilized for effective feature extraction and pattern recognition. Additionally, the iOS mobile app was designed with Model-Agnostic Diverse Datasets (MAD) for enhanced accuracy and versatility.</p>
+        </div>
+
+        <!-- Project Detail 2 -->
+        <div class="mb-8">
+            <h3 class="text-xl font-semibold mb-2">NANOMATERIALS FOR ENERGY SYSTEMS IN SPACE using NANOTECHNOLOGY BASED STUDY</h3>
+            <p class="text-lg">Conducted an internship project focused on nanomaterials for energy systems in space. Utilized nanotechnology-based studies to explore innovative solutions for enhancing energy systems in space environments.</p>
+        </div>
+
+        <!-- Project Detail 3 -->
+        <div class="mb-8">
+            <h3 class="text-xl font-semibold mb-2">POLYPS IMAGE SEGMENTATION using U-NET</h3>
+            <p class="text-lg">Engaged in an internship project involving image segmentation for polyps using U-Net. Applied deep learning techniques to develop an efficient and accurate segmentation model for medical imaging.</p>
+        </div>
+
+        <!-- Project Detail 4 -->
+        <div class="mb-8">
+            <h3 class="text-xl font-semibold mb-2">A NOVEL METHOD FOR HANDWRITTEN DIGIT RECOGNITION using Deep Learning</h3>
+            <p class="text-lg">Contributed to an internship project focusing on a novel method for handwritten digit recognition using deep learning techniques. Explored innovative approaches to enhance accuracy in recognizing handwritten digits.</p>
         </div>
 
         <!-- Add more project details as needed -->
 
     </div>
 </section>
-
+    
 
     <!-- Achievements Section -->
     <section class="bg-gray-100 py-16">
