--- a/index.html
+++ b/index.html
@@ -21,20 +21,16 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="bg-gray-800 text-white h-screen flex items-center justify-center">
-        <div class="text-center">
-            <h2 class="text-4xl font-bold mb-2">Welcome to My Portfolio</h2>
-            <p class="text-lg">Smart, Intelligent, and Frank Python Developer</p>
-        </div>
-    </header>
+<header class="bg-gray-800 text-white h-screen flex items-center justify-center relative">
+    <div class="text-center">
+        <!-- Profile Photo -->
+        <img src="images/profile.jpeg" alt="Profile Photo" class="rounded-full h-24 w-24 mx-auto mb-4">
 
-    <!-- About Section -->
-    <section class="py-16">
-        <div class="container mx-auto">
-            <h2 class="text-3xl font-bold mb-8">About Me</h2>
-            <p class="text-lg">A smart, intelligent, and frank Python developer willing to contribute to a progressive organization. I have a Bachelor's degree in Computer Science Engineering with a focus on various technologies and programming languages.</p>
-        </div>
-    </section>
+        <h2 class="text-4xl font-bold mb-2">Welcome to My Portfolio</h2>
+        <p class="text-lg">Smart, Intelligent, and Frank Python Developer</p>
+    </div>
+</header>
+    
 
     <!-- Skills Section -->
     <section class="bg-gray-100 py-16">
