--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-<header class="bg-gray-800 text-white h-screen flex items-center justify-center relative">
-    <div class="text-center">
-        <!-- Profile Photo -->
-        <img src="images/profile.jpeg" alt="Profile Photo" class="rounded-full h-24 w-24 mx-auto mb-4">
+       <!-- Hero Section -->
+    <header class="bg-gray-800 text-white h-screen flex items-center justify-center">
+        <div class="text-center">
+            <h2 class="text-4xl font-bold mb-2">Welcome to My Portfolio</h2>
+            <p class="text-lg">Smart, Intelligent, and Frank Python Developer</p>
+        </div>
+    </header>
 
-        <h2 class="text-4xl font-bold mb-2">Welcome to My Portfolio</h2>
-        <p class="text-lg">Smart, Intelligent, and Frank Python Developer</p>
-    </div>
-</header>
     
 
     <!-- Skills Section -->
